--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
   </head>
 
   <body>
-    <h1>Broadway Design</h1>
+    <div class="pagetop"><h1>Broadway Design</h1>
     <!--Top Menu-->
-    <nav>
-    <p><a href="#">Home</a></p>
-    <p><a href="#">About</a></p>
-    <p><a href="#">Work</a></p>
-    <p><a href="#">Team</a></p>
-    <p><a href="#">Contact</a></p>
-    </nav>
+      <nav>
+        <p><a href="#">Home</a></p>
+        <p><a href="#">About</a></p>
+        <p><a href="#">Work</a></p>
+        <p><a href="#">Team</a></p>
+        <p><a href="#">Contact</a></p>
+      </nav>
+    </div>
     <!--Top Page-->
     <h2>Our Process</h2>
 
